[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosage"
version = "0.1.0"
description = "🔮 The Fantasy Data Science Library - AutoSage"
authors = [{ name="Konal Puri", email="purikonal23@gmail.com" }]
license = { text = "MIT" }
dependencies = []
readme = "README.md"
